--- a/www/templates/medicines.html
+++ b/www/templates/medicines.html
@@ -1,10 +1,13 @@
 <ion-view title="Medicines">
   <ion-content class="has-header">
     <ion-list>
-      <ion-item ng-repeat="med in medicines" class="item item-thumbnail-left" type="item-text-wrap" href="#/app/medicine/{{med.id}}">
+      <ion-item ng-repeat="med in medicines" class="item item-thumbnail-left item-button-right" type="item-text-wrap" href="#/app/medicine/{{med.id}}">
         <img src="{{ med.image || 'img/default.png' }}">
         <h2>{{ med.name }}</h2>
         <p>{{ med.dosage() }}</p>
+        <button class="button button-assertive" ng-click="deleteMed(index, $event)">
+          <i class="icon ion-trash-a"></i>
+        </button>
       </ion-item>
     </ion-list>
   </ion-content>
