Cancel adding medicine.

--- a/www/templates/add_medicine.html
+++ b/www/templates/add_medicine.html
@@ -20,7 +20,10 @@
         <span class="input-label">Description</span>
         <textarea type="text" placeholder="Headache control" ng-model="med.description"></textarea>
       </label>
-      <button class="button button-block button-positive activated" ng-click="addMed()">Submit</button>
+
+      <button class="button button-block button-positive activated" ng-click="addMed()">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+      <button class="button button-block button-positive activated" ng-click="closeModal()">Cancel</button>
+
     </div>
   </ion-content>
 </ion-modal-view>
