shortify if condition to functional programming goodies.

--- a/www/templates/add_medicine.html
+++ b/www/templates/add_medicine.html
@@ -6,19 +6,19 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Name</span>
-        <input type="text" placeholder="Nims" ng-model="med.name">
+        <input type="text" placeholder="Nims" ng-model="medicine.name">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Times</span>
-        <input type="text" placeholder="3" ng-model="med.times">
+        <input type="text" placeholder="3" ng-model="medicine.times">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Start At</span>
-        <input type="text" placeholder="6 AM" ng-model="med.start_at">
+        <input type="text" placeholder="6 AM" ng-model="medicine.start_at">
       </label>
       <label class="item item-input item-stacked-label">
         <span class="input-label">Description</span>
-        <textarea type="text" placeholder="Headache control" ng-model="med.description"></textarea>
+        <textarea type="text" placeholder="Headache control" ng-model="medicine.description"></textarea>
       </label>
 
       <button class="button button-block button-positive activated" ng-click="addMed()">Submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
